# yar

./: .editorconfig  Cargo.toml  README.md  index.html  index.scss
src/: db.rs  layout.rs  main.rs
src/components/: add_record.rs  header.rs  icon.rs  list.rs  list_group.rs  mod.rs
src/theme/: components.scss  icons.scss  layout.scss  variables.scss
