[package]
name = "yar"
version = "0.1.0"
edition = "2021"
description = "记账工具"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19.3"
gloo = "0.5.0"
indexed_db_futures = { version = "0.2.1", features = ["indices"] }
wasm-bindgen = { version = "0.2.78" }
js-sys = "0.3.55"